Fixed CORS for Netlify